--- a/catalog/spatial/csw/spatial-csw-endpoint-api/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-endpoint-api/pom.xml
@@ -25,9 +25,19 @@
     <packaging>bundle</packaging>
     <name>DDF :: Spatial :: CSW :: Endpoint :: API</name>
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>org.codice.ddf.spatial</groupId>-->
+<!--            <artifactId>spatial-csw-common</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.codice.ddf.spatial</groupId>
-            <artifactId>spatial-csw-common</artifactId>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>${javax.ws.rs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
