DDF-6680 More unit tests pass

--- a/catalog/spatial/csw/spatial-csw-common/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-common/pom.xml
@@ -196,5 +196,9 @@
             <artifactId>spatial-csw-endpoint-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-commons</artifactId>
+        </dependency>
     </dependencies>
 </project>
