--- a/catalog/spatial/csw/pom.xml
+++ b/catalog/spatial/csw/pom.xml
@@ -23,9 +23,9 @@
     <name>DDF :: Spatial :: CSW</name>
     <packaging>pom</packaging>
     <modules>
-        <module>spatial-csw-endpoint-api</module>
         <module>spatial-csw-action</module>
         <module>spatial-csw-schema-bindings</module>
+        <module>spatial-csw-api</module>
         <module>spatial-csw-common</module>
         <module>spatial-csw-transformer</module>
         <module>spatial-csw-source</module>
