--- a/catalog/spatial/csw/spatial-csw-common/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-common/pom.xml
@@ -182,7 +182,7 @@
         </dependency>
         <dependency>
             <groupId>org.codice.ddf.spatial</groupId>
-            <artifactId>spatial-csw-endpoint-api</artifactId>
+            <artifactId>spatial-csw-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
