--- a/catalog/spatial/spatial-app/pom.xml
+++ b/catalog/spatial/spatial-app/pom.xml
@@ -129,6 +129,11 @@
         </dependency>
         <dependency>
             <groupId>org.codice.ddf.spatial</groupId>
+            <artifactId>spatial-csw-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-csw-transformer</artifactId>
             <version>${project.version}</version>
         </dependency>
