DDF-6680 Spatial app build and unit test run.

--- a/catalog/spatial/csw/spatial-csw-action/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-action/pom.xml
@@ -32,12 +32,15 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-csw-schema-bindings</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
