DDF-6680 Builds from root

--- a/catalog/spatial/spatial-app/pom.xml
+++ b/catalog/spatial/spatial-app/pom.xml
@@ -79,6 +79,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.codice.ddf</groupId>
+            <artifactId>geospatial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.spatial.kml</groupId>
             <artifactId>spatial-kml-networklinkendpoint</artifactId>
             <version>${project.version}</version>
