--- a/catalog/spatial/csw/spatial-csw-connectedsource/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-connectedsource/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>gt-cql</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.codice.ddf</groupId>
+            <artifactId>geospatial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-xml</artifactId>
         </dependency>
